force-app/main/default/objects/ProcessException/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment</label>
    <referenceTo>Shipment</referenceTo>
    <relationshipLabel>Process Exceptions</relationshipLabel>
    <relationshipName>Process_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>