force-app/main/default/objects/ProcessException/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <description>response code from the API callout</description>
    <label>StatusCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>