force-app/main/default/objects/ProcessException/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <description>The transaction that this exception belongs to</description>
    <inlineHelpText>The transaction that this exception belongs to</inlineHelpText>
    <label>TransactionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>